// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Different Categories renders correctly | coworker 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#005A7F",
      "borderRadius": 50,
      "borderWidth": 0,
      "height": 72,
      "justifyContent": "center",
      "margin": 0,
      "marginVertical": 4,
      "opacity": 1,
      "paddingHorizontal": 20,
      "paddingVertical": 10,
      "width": 650,
    }
  }
  testID="coworkerButton"
>
  <View
    style={
      Array [
        Object {
          "paddingHorizontal": 10,
          "width": "100%",
        },
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#ffffff",
          "fontFamily": "SourceSansPro-Light",
          "fontSize": 24,
          "fontStyle": "normal",
          "fontWeight": "300",
          "lineHeight": 30,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      Coworker
    </Text>
    <SvgMock
      color="#3CC8E6"
    />
  </View>
</View>
`;

exports[`Different Categories renders correctly | family 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#005A7F",
      "borderRadius": 50,
      "borderWidth": 0,
      "height": 72,
      "justifyContent": "center",
      "margin": 0,
      "marginVertical": 4,
      "opacity": 1,
      "paddingHorizontal": 20,
      "paddingVertical": 10,
      "width": 650,
    }
  }
  testID="familyButton"
>
  <View
    style={
      Array [
        Object {
          "paddingHorizontal": 10,
          "width": "100%",
        },
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#ffffff",
          "fontFamily": "SourceSansPro-Light",
          "fontSize": 24,
          "fontStyle": "normal",
          "fontWeight": "300",
          "lineHeight": 30,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      Family
    </Text>
    <SvgMock
      color="#3CC8E6"
    />
  </View>
</View>
`;

exports[`Different Categories renders correctly | friend 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#005A7F",
      "borderRadius": 50,
      "borderWidth": 0,
      "height": 72,
      "justifyContent": "center",
      "margin": 0,
      "marginVertical": 4,
      "opacity": 1,
      "paddingHorizontal": 20,
      "paddingVertical": 10,
      "width": 650,
    }
  }
  testID="friendButton"
>
  <View
    style={
      Array [
        Object {
          "paddingHorizontal": 10,
          "width": "100%",
        },
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#ffffff",
          "fontFamily": "SourceSansPro-Light",
          "fontSize": 24,
          "fontStyle": "normal",
          "fontWeight": "300",
          "lineHeight": 30,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      Friend
    </Text>
    <SvgMock
      color="#3CC8E6"
    />
  </View>
</View>
`;

exports[`Different Categories renders correctly | neighbor 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#005A7F",
      "borderRadius": 50,
      "borderWidth": 0,
      "height": 72,
      "justifyContent": "center",
      "margin": 0,
      "marginVertical": 4,
      "opacity": 1,
      "paddingHorizontal": 20,
      "paddingVertical": 10,
      "width": 650,
    }
  }
  testID="neighborButton"
>
  <View
    style={
      Array [
        Object {
          "paddingHorizontal": 10,
          "width": "100%",
        },
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#ffffff",
          "fontFamily": "SourceSansPro-Light",
          "fontSize": 24,
          "fontStyle": "normal",
          "fontWeight": "300",
          "lineHeight": 30,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      Neighbor
    </Text>
    <SvgMock
      color="#3CC8E6"
    />
  </View>
</View>
`;

exports[`Different Categories renders correctly | other 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#005A7F",
      "borderRadius": 50,
      "borderWidth": 0,
      "height": 72,
      "justifyContent": "center",
      "margin": 0,
      "marginVertical": 4,
      "opacity": 1,
      "paddingHorizontal": 20,
      "paddingVertical": 10,
      "width": 650,
    }
  }
  testID="otherButton"
>
  <View
    style={
      Array [
        Object {
          "paddingHorizontal": 10,
          "width": "100%",
        },
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#ffffff",
          "fontFamily": "SourceSansPro-Light",
          "fontSize": 24,
          "fontStyle": "normal",
          "fontWeight": "300",
          "lineHeight": 30,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      Other
    </Text>
    <SvgMock
      color="#3CC8E6"
    />
  </View>
</View>
`;

exports[`onPress fires onPress when clicked 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#005A7F",
      "borderRadius": 50,
      "borderWidth": 0,
      "height": 72,
      "justifyContent": "center",
      "margin": 0,
      "marginVertical": 4,
      "opacity": 1,
      "paddingHorizontal": 20,
      "paddingVertical": 10,
      "width": 650,
    }
  }
  testID="friendButton"
>
  <View
    style={
      Array [
        Object {
          "paddingHorizontal": 10,
          "width": "100%",
        },
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#ffffff",
          "fontFamily": "SourceSansPro-Light",
          "fontSize": 24,
          "fontStyle": "normal",
          "fontWeight": "300",
          "lineHeight": 30,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      Friend
    </Text>
    <SvgMock
      color="#3CC8E6"
    />
  </View>
</View>
`;

exports[`render correctly | active 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#3CC8E6",
      "borderRadius": 50,
      "borderWidth": 0,
      "height": 72,
      "justifyContent": "center",
      "margin": 0,
      "marginVertical": 4,
      "opacity": 1,
      "paddingHorizontal": 20,
      "paddingVertical": 10,
      "width": 650,
    }
  }
  testID="familyButton"
>
  <View
    style={
      Array [
        Object {
          "paddingHorizontal": 10,
          "width": "100%",
        },
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#ffffff",
          "fontFamily": "SourceSansPro-Light",
          "fontSize": 24,
          "fontStyle": "normal",
          "fontWeight": "300",
          "lineHeight": 30,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      Family
    </Text>
    <SvgMock
      color="#ffffff"
    />
  </View>
</View>
`;

exports[`render correctly | non-active 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#005A7F",
      "borderRadius": 50,
      "borderWidth": 0,
      "height": 72,
      "justifyContent": "center",
      "margin": 0,
      "marginVertical": 4,
      "opacity": 1,
      "paddingHorizontal": 20,
      "paddingVertical": 10,
      "width": 650,
    }
  }
  testID="friendButton"
>
  <View
    style={
      Array [
        Object {
          "paddingHorizontal": 10,
          "width": "100%",
        },
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#ffffff",
          "fontFamily": "SourceSansPro-Light",
          "fontSize": 24,
          "fontStyle": "normal",
          "fontWeight": "300",
          "lineHeight": 30,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      Friend
    </Text>
    <SvgMock
      color="#3CC8E6"
    />
  </View>
</View>
`;
